# pkm

./: .gitignore  PYTHON_PROJECT.md  README.md  SESSION_PROGRESS.md  claude-prompts.md  claude-session-state.md  systemd-environment-variables.md  temp
.claude/: project.md  settings.local.json
.claude/agents/: oms-graph.md
.claude/commands/: get-order-by-id.md  rfc-summary.md
fleeting-notes/: cds.md  credit-risk.md
fleeting-notes/oms-cds/: .mcp.json  README.md  cds-single-name-exposition.md  cds.md  claude-prompts.md  claude-session-state.md  credit-risk.md  man-single-name-cds.md  misc-notes.md  order-management-project-cds-slack.md  questions-and-to-do.md  rosetta-for-cds.md  security-envoy.md
fleeting-notes/oms-cds/.claude/: settings.local.json
fleeting-notes/oms-cds/src/: README.md  app.py  cds_book_analysis.py  db_connection.py  get-auth rosa.py  get-auth.py  get-token-with-no-click.py  requirements.txt
fleeting-notes/oms-cds/src/common/: authutils.py  keycloakted.py  urlutils.py
pkm-tools/: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml
pkm-tools/guides/: learning-multi-service-computer-system.md
pkm-tools/src/pkm_tools/: __init__.py  cli.py  config.py  repo_sync.py  utils.py
rfc/RFC-087/: RFC-087-TradeBooking-NotificationCentre-Migration-Analysis.md
rfc/RFC-089/: personal-notes.md
systems/GCP/docs/: README.md
systems/GCP/service-repositories/: repository-list.txt
systems/man-oms/docs/: README.md
systems/man-oms/service-repositories/: repository-list.txt
systems/panorama/service-repositories/: repository-list.txt
systems/thk/docs/: README.md
systems/thk/service-repositories/: repository-list.txt
workflows/pr/: .mcp.json
workflows/pr/.claude/: settings.local.json
workflows/pr/.claude/commands/: review-pr-auto.md  review-pr.md
workflows/pr/pr-reviews/: WORKFLOW_UPDATES.md  convert_to_html.py  pr-134-review-20251113-124700.html  pr-134-review-20251113-124700.md
